--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -2,7 +2,7 @@ name: OLX Scraper
 
 on:
   schedule:
-    - cron: '*/10 6-23 * * *' # co 10 minut od 6:00 do 23:59
+    - cron: '*/10 6-23 * * * *' # co 10 minut od 6:00 do 23:59
   workflow_dispatch:
 
 jobs:
